# ncal

./: .flake8  .gitignore  404.html  Dockerfile  GCalToken.py  Notion-GCal-2WaySync-Public.py  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  secret_tokens_example.py  sitemap.xml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: code-style.yml  codeql-analysis.yml  docker-publish.yml  docs.yml  main.yml  publish-release.yml  python-publish.yml  tests.yml
Module-Reference/cli/: index.html
Module-Reference/config/: index.html
Module-Reference/core/: index.html
Module-Reference/gcal_setup/: index.html
Module-Reference/notion_utils/: index.html
docs/: index.md  reference.md
docs/Module-Reference/: cli.md  config.md  core.md  gcal_setup.md  notion_utils.md  utils.md
docs/stylesheets/: extra.css
ncal/: __init__.py  __main__.py  cli.py  config.py  core.py  gcal_setup.py  gcal_token.py  notion_utils.py
notion_gcal_sync/: GCalToken.py  Notion-GCal-2WaySync-Public.py  __init__.py  __main__.py  cli.py  config.py  core.py
search/: search_index.json
tests/: test_ncal_config.py  test_ncal_core.py  test_ncal_utils.py  test_notion_gcal_sync.py
