[tool.poetry]
name = "notion-gcal-sync"
version = "0.1.0"
description = ""
authors = ["Sam Greening <samjg60@gmail.com>"]
license = "GNU GPL"
homepage = "https://github.com/SG60/Notion-and-Google-Calendar-2-Way-Sync"
repository = "https://github.com/SG60/Notion-and-Google-Calendar-2-Way-Sync"
readme = "README.md"

[tool.poetry.scripts]
notion-gcal-sync = "notion_gcal_sync.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
notion-client = "^0.8.0"
google-api-python-client = "^2.33.0"
google-auth-oauthlib = "^0.4.6"
python-dateutil = "^2.8.2"
tomli = "^2.0.0"
typer = "^0.4.0"
pydantic = "^1.9.0"
python-dotenv = "^0.19.2"
arrow = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "^0.930"
types-python-dateutil = "^2.8.4"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
# addopts = "--cov=notion_gcal_sync"
